EKS/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-deployment
  labels:
    app: react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react
  template:
    metadata:
      labels:
        app: react
    spec:
      containers:
      - name: react
        image: yashmehta07/react
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "100Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  type: NodePort 
  selector:
    app: react
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    nodePort: 30002

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress
#   annotations:
#     alb.ingress.kubernetes.io/scheme: internet-facing
#     alb.ingress.kubernetes.io/target-type: ip
# spec:
#   ingressClassName: alb
#   rules:
#     - http:
#         paths:
#         - path: /
#           pathType: Prefix
#           backend:
#             service:
#               name: react-service
#               port:
#                 number: 80



#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
 # name: ingress
  #annotations:
   #  nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
 # ingressClassName: nginx
  #rules:
   #  - http:
    #    paths:
     #     - path: /
      #     backend:
       #       service:
        #        name: react-service
         ##        number: 80
