EKS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: alb
  rules:
  - host: aws.atulaman.site
    http:
      paths:
      - path: /.well-known/acme-challenge/
        pathType: Prefix
        backend:
          service:
            name: cm-acme-http-solver-jlcpk
            port:
              number: 8089

  - host: "aws1.atulaman.site"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
  # tls:
  # - hosts:
  #   - "aws.atulaman.site"
  #   secretName: example-tls
