EKS/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: default
  annotations:
    #  nginx.ingress.kubernetes.io/rewrite-target: /
     cert-manager.io/cluster-issuer: "letsencrypt-prod"
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/target-type: ip
    #  nginx.ingress.kubernetes.io/ssl-redirect: "true"
    
spec:
  tls:
  - hosts:
    - "yash.atulaman.site"
    - "nginx.atulaman.site"
    secretName: example-tls
  ingressClassName: alb
  rules:
  - host: "yash.atulaman.site"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-service
            port:
              number: 80
      # - path: /nginx
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: nginx-service
      #       port:
      #         number: 80
  - host: "nginx.atulaman.site"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 80
